--- a/backend/package.json
+++ b/backend/package.json
@@ -15,8 +15,11 @@
     "corn": "^0.0.1",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
+    "csv-parser": "^3.2.0",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "fast-csv": "^5.0.5",
+    "multer": "^2.0.2",
     "nodemailer": "^7.0.9",
     "nodemon": "^3.1.10"
   }
